[project]
name = "ratchet_coverage"
version = "1.0.1"
description = "Ratchet up a coverage.py configuration's fail_under to prevent coverage regressions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coverage>=7.13.2",
    "tomlkit>=0.14.0",
]

[project.scripts]
ratchet-coverage = "ratchet_coverage.ratchet:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov"

[tool.coverage.run]
branch = true

[tool.coverage.report]
format = "text"
fail_under = 2
show_missing = true
